# aws-region-watch

./: .gitignore  LICENSE  README.md  ap-southeast-2.json  ap-southeast-4.json  ap-southeast-6.json  pyproject.toml  regions.json  us-east-2.json
.github/workflows/: test.yml  watch.yml
src/aws_region_watch/: __init__.py
tests/: __init__.py  conftest.py  test_api.py  test_region_detection.py  test_state.py  test_validation.py
