[project]
name = "aws-region-watch"
version = "0.1.1"
description = "Monitor AWS service and feature availability in your regions"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Rodney Haywood"}
]
keywords = ["aws", "regions", "monitoring", "availability", "services"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
dependencies = [
    "httpx==0.28.1",
]

[project.urls]
Homepage = "https://github.com/Iamrodos/aws-region-watch"
Repository = "https://github.com/Iamrodos/aws-region-watch"

[project.scripts]
aws-region-watch = "aws_region_watch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aws_region_watch"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
